# haskell-from-first-principles-solutions

./: .gitignore
chapter1/: learn.hs
chapter10/: databaseItems.hs  exercises.hs  fibs.hs  warmup.hs
chapter11/: deconstruction.hs  funcsAreExp.hs  guessWhat.hs  huttonRazor.hs  isSubsequenceOf.hs  jammin.hs  langEx.hs  myIf.hs  newtype.hs  phone.hs  programmer.hs  trees.hs  vehicle.hs  viginere.hs
chapter12/: anamorphisms.hs  eitherLib.hs  maybeLib.hs  naturalNumbers.hs  person.hs  stringProcessing.hs  trees.hs
chapter13/: palindrom.hs  person.hs
chapter13/hangman/: hangman.cabal
chapter13/hangman/src/: Main.hs
chapter13/hangman/test/: Tests.hs
chapter14/WordNumberTest/: WordNumberTest.cabal
chapter14/WordNumberTest/src/: wordNumber.hs  wordNumberTest.hs
chapter14/addition/: Addition.hs  addition.cabal  repeatedAddition.hs
chapter14/arbitrary/: arbitrary.cabal
chapter14/arbitrary/src/: CoArbitrary.hs  Main.hs
chapter14/arit/: arit.cabal
chapter14/arit/src/: Main.hs
chapter14/arithmetic/: arithmetic.cabal  arithmetic.hs
chapter14/coArb/: README.md  coArb.cabal
chapter14/coArb/src/: Main.hs
chapter14/genFool/: README.md  genFool.cabal
chapter14/genFool/src/: Main.hs
chapter14/idempotence/: idempotence.cabal
chapter14/idempotence/src/: Main.hs
chapter14/morse/: LICENSE  package.yaml
chapter14/morse/src/: Main.hs  Morse.hs
chapter14/morse/tests/: tests.hs
chapter15/: optional.hs
chapter15/bull/: bull.cabal
chapter15/bull/src/: Main.hs
chapter15/madlib/: MadLib.hs
chapter15/monoidAsc/: README.md  monoidAsc.cabal
chapter15/monoidAsc/src/: Main.hs
chapter15/monoidExercises/: monoidExercises.cabal
chapter15/monoidExercises/src/: Main.hs
chapter15/orphan-instance/: ListyInstances.hs
chapter15/semigroupAssoc/: README.md  semigroupAssoc.cabal
chapter15/semigroupAssoc/src/: Main.hs
chapter16/InstancesOfFunc/: InstancesOfFunc.cabal
chapter16/InstancesOfFunc.hsproj/: .uuid
chapter16/InstancesOfFunc.hsproj/InstancesOfFunc/: InstancesOfFunc.cabal
chapter16/InstancesOfFunc.hsproj/InstancesOfFunc/src/: Exercises.hs  FlipFunctor.hs  Intermission.hs  Main.hs  _Exercises.hsplay  _FlipFunctor.hsplay  _Main.hsplay
chapter16/InstancesOfFunc/src/: Main.hs
chapter16/ReplaceExperiment/: README.md  ReplaceExperiment.cabal
chapter16/ReplaceExperiment/src/: Main.hs
chapter16/goodBadUgly/: README.md  goodBadUgly.cabal
chapter16/goodBadUgly/src/: Main.hs
chapter17/Applicative.hsproj/: .uuid
chapter17/Applicative.hsproj/Applicative/: Applicative.cabal  BadMonoid.hs  ConstantInstance.hs  Exercises.hs  FixerUpper.hs  IdentityInstance.hs  ListApplicative.hs  Lookups.hs  Main.hs  MaybeApplicative.hs  Validation.hs  Vowels.hs  ZipListApplicative.hs  _BadMonoid.hsplay  _ConstantInstance.hsplay  _FixerUpper.hsplay  _IdentityInstance.hsplay  _ListApplicative.hsplay  _Lookups.hsplay  _Main.hsplay  _MaybeApplicative.hsplay  _Validation.hsplay  _Vowels.hsplay  _ZipListApplicative.hsplay
chapter18/: EitherMonad.hs  EitherMonadImpl.hs  KleisliComposition.hs
chapter18/BadMonad/: BadMonad.cabal
chapter18/BadMonad/src/: Main.hs
chapter18/ChapterExercises/: ChapterExercises.cabal
chapter18/ChapterExercises/src/: Main.hs
chapter19/ScottyHello/: README.md  ScottyHello.cabal
chapter19/ScottyHello/src/: Main.hs
chapter19/shawty/: shawty.cabal
chapter19/shawty/app/: Main.hs
chapter20/: FoldableExercises.hs  FoldableLib.hs
chapter21/: Either.hs
chapter21/Exercises/: Exercises.cabal
chapter21/Exercises/src/: Main.hs  SkiFree.hs  Tree.hs
chapter21/HttpStuff/: HttpStuff.cabal  README.md
chapter21/HttpStuff/src/: Main.hs
chapter22/: FuncApplicative.hs  FuncMonad.hs  ReaderPractice.hs  bip.hs  cap.hs
chapter22/shawty-prime/: README.md  shawty-prime.cabal
chapter22/shawty-prime/src/: Main.hs
chapter23/GenNumber/: GenNumber.cabal  README.md
chapter23/GenNumber/src/: Exercises.hs  FizzBuzz.hs  Main.hs  Moi.hs  RandomExample.hs  RandomExample2.hs
chapter24/LearnParsers/: LearnParsers.cabal
chapter24/LearnParsers/src/: AltParsing.hs  BT.hs  Data.Ini.hs  LearnParsers.hs  LogParser.hs  Marshalling.hs  PhoneNumbers.hs  PosInt.hs  SemVer.hs  Text.Fractions.hs  ipv4.hs
chapter25/composing-types/: package.yaml
chapter25/composing-types/src/: Lib.hs  applicatives.hs
chapter5/: arith3broken.hs
chapter7/: HOF.hs  arith4.hs  foldBool.hs  patternMatching.hs  pf.hs  tendigit.hs
chapter8/: dividedBy.hs  exercises.hs  mcCarthy.hs  repeatedAddition.hs  sumUpTo.hs  wordNumber.hs
chapter9/: cipher.hs  eft.hs  exercises1.hs  exercises2.hs  intermission2.hs  myZip.hs  poemLines.hs
