name:                hangman
version:             0.1.0.0
synopsis:            Playing Hangman
-- description:
homepage:            https://github.com/bargsteen/hangman#readme
license:             BSD3
license-file:        LICENSE
author:              Kasper Dissing Bargsteen
maintainer:          kasper@bargsteen.com
copyright:           2018, Kasper Dissing Bargsteen
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hangman
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , random
                     , split
                     , QuickCheck

library
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , random
    , split
    , QuickCheck
  exposed-modules:
      Main
  default-language: Haskell2010

test-suite test
  type:               exitcode-stdio-1.0
  main-is:            Tests.hs
  hs-source-dirs:     test
  default-language:   Haskell2010
  build-depends:      base >= 4.7 && < 5
                    , hangman
                    , QuickCheck
                    , hspec
  
