name:                WordNumberTest
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Bargsteen/WordNumberTest#readme
license:             BSD3
license-file:        LICENSE
author:              Kasper Dissing Bargsteen
maintainer:          Kasper@Bargsteen.com
copyright:           2018 Kasper Dissing Bargsteen
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     WordNumberTest
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , hspec
