name:                ScottyHello
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/bargsteen/ScottyHello#readme
license:             BSD3
license-file:        LICENSE
author:              Kasper Dissing Bargsteen
maintainer:          kasper@bargsteen.com
copyright:           Kasper Dissing Bargsteen
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable ScottyHello
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , scotty >= 0.11
