name:                shawty
version:             0.1.0.0
synopsis:            URI shortener
description:         See README.md
homepage:            https://github.com/bargsteen/shawty#readme
license:             BSD3
license-file:        LICENSE
author:              Kasper Dissing Bargsteen
maintainer:          kasper@bargsteen.com
copyright:           Kasper Dissing Bargsteen
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable shawty
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , bytestring >= 0.10
                     , hedis
                     , mtl
                     , network-uri
                     , random
                     , scotty
                     , semigroups
                     , text
                     , transformers >= 0.5        