name: InstancesOfFunc
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: 2018 Kasper Dissing Bargsteen
maintainer: Kasper@Bargsteen.com
homepage: https://github.com/Bargsteen/InstancesOfFunc#readme
category: Web
author: Kasper Dissing Bargsteen
extra-source-files:
    README.md
x-ghc-framework-version: 8.0.2-9.6-1
x-last-ide-version: HfM1.6.0

executable InstancesOfFunc
    main-is: Main.hs
    build-depends:
        base -any,
        QuickCheck -any
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:
        Exercises
        FlipFunctor
        Intermission

