name: Applicative
version: 1.0
cabal-version: 1.22
build-type: Simple
license: AllRightsReserved
stability: experimental
x-ghc-framework-version: 8.0.2-9.6-1
x-last-ide-version: HfM1.6.0

executable Applicative
    main-is: Main.hs
    build-depends:
        QuickCheck -any,
        base -any,
        checkers -any
    default-language: Haskell2010
    other-modules:
        IdentityInstance
        ListApplicative
        Exercises
        FixerUpper
        BadMonoid
        Vowels
        ZipListApplicative
        MaybeApplicative
        Lookups
        ConstantInstance
        Validation

